added counting points, activity to show result, and more possibility in ReadingTextActions